Mobile fixes
1) Fixed home section to fit on smaller devices by reducing h1 from a font size of 3rem to 1rem
2) Hidden text elements were pushed off screen on smaller devices making the body's width extend to fill. Added overflow-X hidden to the main element.

--- a/styles.css
+++ b/styles.css
@@ -115,25 +115,6 @@
     transform: translateX(0);
 }
 
-/*
-.home-content > .headshot-container {
-    transition-delay: 100ms;
-}
-
-.home-content > .main-heading {
-    transition-delay: 200ms;
-}
-
-.home-content > p {
-    transition-delay: 600ms;
-}
-
-.home-content > .btn {
-    transition-delay: 4s;
-    transition-property: opacity, filter, transform;
-}
-*/
-
 /* skillbar on scroll */
 
 .skillbar-hidden {
@@ -187,6 +168,10 @@ body {
     background-color: var(--bg-color);
 }
 
+main {
+    overflow-x: hidden;
+}
+
 .section-padding {
     padding: 3rem 2rem;
 }
@@ -199,8 +184,14 @@ hr {
 
 /* Text stlying */
 
-.main-heading {
+h1 {
     font-size: 3rem;
+}
+
+@media (max-width: 340px) {
+    h1 {
+        font-size: 2rem;
+    }
 }
 
 .section-subheading {
